Fix vertical alignment of "x" on key-value pairs input display list

--- a/cmd/playground/static/assets/app.css
+++ b/cmd/playground/static/assets/app.css
@@ -390,7 +390,6 @@ ul, li {
     font-size: small;
     white-space: nowrap;
     overflow: hidden;
-    align-items: flex-start;
 }
 .pair-list > .headers {
     font-weight: 500;
